Fixed problem of menu not showing correctly with auto-hiding header.

--- a/css/subpages/style.css
+++ b/css/subpages/style.css
@@ -929,19 +929,6 @@
 		height: 7em;
 		background: #fff;
 		border: none;
-		-webkit-transform: translateY(0);
-			 -moz-transform: translateY(0);
-				-ms-transform: translateY(0);
-				 -o-transform: translateY(0);
-						transform: translateY(0);
-	}
-
-	.subpageBody header.subpageBodyHiddenHeader {
-		-webkit-transform: translateY(-100%);
-			 -moz-transform: translateY(-100%);
-				-ms-transform: translateY(-100%);
-				 -o-transform: translateY(-100%);
-						transform: translateY(-100%);
 	}
 
 	.subpageNav {
